# nangman-crypto-intel-structuring

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  ENTERPRISE_DOD.md  README.md  compose.yml  sonar-project.properties
.github/workflows/: sonar.yml
asyncapi/: nats.asyncapi.json
ecs/: task-definition.example.json  task-role-policy.example.json
schemas/: context_flag_packet_v1.schema.json  intel_l1_index_pointer_v1.schema.json  intel_l1_manifest_v1.schema.json  intel_l1_packet_revision_index_v1.schema.json  raw_intel_event_created_v2.schema.json  story_cluster_v1.schema.json  structured_intel_packet_v1.schema.json  structured_pointer_v1.schema.json  structuring_health_event_v1.schema.json
scripts/: check-runtime.sh
src/: config.rs  error.rs  hash.rs  jsonl.rs  lib.rs  main.rs  observability.rs  time.rs
src/admission/: market_l1.rs  mod.rs
src/ai/: bedrock.rs  contract.rs  evidence.rs  mod.rs
src/market/: mod.rs  parquet_compact.rs  reader.rs
src/models/: constants.rs  market.rs  mod.rs  output.rs  raw.rs
src/nats/: config.rs  consumer.rs  mod.rs  publisher.rs
src/storage/: object_store.rs
src/structuring/: mod.rs  nli.rs  packet.rs  router.rs  rule.rs  story.rs  tests.rs  validation.rs
src/workflow/: keys.rs  mod.rs  processor.rs  rehydration.rs
tests/: contract_artifacts.rs
