[package]
name = "intel-structuring-app"
version = "0.1.0"
edition = "2024"
license = "MIT"
rust-version = "1.94"

[dependencies]
arrow-array = "58.2.0"
async-nats = "0.47.0"
async-trait = "0.1.89"
aws-config = { version = "1.8.16", features = ["behavior-version-latest"] }
aws-credential-types = "1.2.14"
aws-sdk-bedrockruntime = "1.109.0"
aws-sdk-s3 = "1.131.0"
aws-smithy-types = "1.3.5"
aws-types = "1.3.10"
bytes = "1.10.1"
chrono = { version = "0.4.42", default-features = false, features = ["clock"] }
futures-util = "0.3.32"
parquet = { version = "58.2.0", default-features = false, features = ["arrow", "zstd"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10.9"
tokio = { version = "1.52.1", features = ["fs", "macros", "rt-multi-thread", "signal", "time"] }

[dev-dependencies]
tempfile = "3.25.0"
